--- a/styles.html
+++ b/styles.html
@@ -460,7 +460,146 @@
 		   	
    </section> <!--styles -->	
 
-	
+	<!-- CTA Section
+   ================================================== -->
+   <section id="cta" class="grey-section">
+
+	<div class="row cta-content">
+
+		<div class="col-twelve section-ads">  
+
+			  <h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Styleshout Recommends Dreamhost.</a></h2>
+
+		   <p class="lead">
+		   Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
+			 Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
+			 <!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
+			 </p>
+
+			 <div class="action">
+			   <a class="button button-primary large" href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Sign Up Now</a>
+		   </div>		     	
+
+		</div>
+
+	</div> <!-- /cta-content -->
+
+</section> <!-- /cta --> 
+
+<!-- stats Section
+   ================================================== -->
+   <section id="stats" class="count-up">
+
+	<div class="row">
+		<div class="col-twelve">
+
+			<div class="block-1-6 block-s-1-3 block-tab-1-2 block-mob-full stats-list">
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-pencil-ruler"></i>
+					</div>
+
+					<h3 class="stat-count">
+						1500
+					</h3>
+
+					<h5 class="stat-title">
+						Projects Completed
+					</h5>
+
+				</div> <!-- /stat -->					
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-users"></i>
+					</div>
+
+					<h3 class="stat-count">
+						900
+					</h3>
+
+					<h5 class="stat-title">
+						Happy Clients
+					</h5>
+
+				</div> <!-- /stat -->
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-badge"></i>
+					</div>
+
+					<h3 class="stat-count">
+						200
+					</h3>
+
+					<h5 class="stat-title">
+						Awards Received
+					</h5>
+
+				</div> <!-- /stat -->									
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-light-bulb"></i>
+					</div>
+
+					<h3 class="stat-count">
+						120
+					</h3>
+
+					<h5 class="stat-title">
+						Crazy Ideas
+					</h5>
+
+				</div> <!-- /stat -->
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-cup"></i>
+					</div>
+
+					<h3 class="stat-count">
+						1500
+					</h3>
+
+					<h5 class="stat-title">
+						Coffee Cups
+					</h5>
+
+				</div> <!-- /stat -->
+
+				<div class="bgrid stat">
+
+					<div class="icon-part">
+						<i class="icon-clock"></i>
+					</div>
+
+					<h3 class="stat-count">
+						7200
+					</h3>
+
+					<h5 class="stat-title">
+						Hours
+					</h5>
+
+				</div> <!-- /stat -->
+
+			</div> <!-- /stats-list -->
+
+		</div> <!-- /twelve -->
+	</div> <!-- /row -->
+
+</section> <!-- /stats -->
+
+--
+
    <!-- contact
    ================================================== -->
 	<section id="contact">
