--- a/index.html
+++ b/index.html
@@ -272,6 +272,24 @@
 					</div>
 
 					<div class="timeline-header">
+						<h3>Teaching programming and information technology</h3>
+						<p>November 2017 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>Ibnu Hajar Boarding School</h4>
+						<p>Teach programming and information technology to students from junior high to high school levels.</p>
+					</div>
+			    
+				</div> <!-- /timeline-block -->
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+					 <i class="fa fa-briefcase"></i>
+					</div>
+
+					<div class="timeline-header">
 						<h3>IT Support</h3>
 						<p>November 2017 - Present</p>
 					</div>
@@ -482,7 +500,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/aplikasiLatihanSoalWidyaEdu.PNG" alt="Liberty">
+	               	<img src="images/portfolio/aplikasiLatihanSoalWidyaEdu.PNG" alt="aplikasilatsoal">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -498,7 +516,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/linktree-robby.png" alt="Shutterbug">
+	               	<img src="images/portfolio/linktree-robby.png" alt="linktree-robby">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -514,7 +532,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/flyer_lws.jpg"alt="Clouds">
+	               	<img src="images/portfolio/flyer_lws.jpg"alt="flyerlws">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -530,7 +548,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/Bahari_Service_AC.png" alt="Beetle">
+	               	<img src="images/portfolio/Bahari_Service_AC.png" alt="bahariserviceac">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -546,7 +564,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/landingPage.png" alt="Lighthouse">
+	               	<img src="images/portfolio/landingPage.png" alt="landingpage">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -562,7 +580,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/zairahMotorize.png" alt="Salad">
+	               	<img src="images/portfolio/zairahMotorize.png" alt="zairahmotorize">
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
