--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Teaching programming and information technology</h3>
+						<h3>Teaching programming and Supporting information technology</h3>
 						<p>November 2017 - Present</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>Ibnu Hajar Boarding School</h4>
-						<p>Teach programming and information technology to students from junior high to high school levels.</p>
+						<p>Teach programming and supporting information technology to students from junior high to high school levels.</p>
 					</div>
 			    
 				</div> <!-- /timeline-block -->
