--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
 					</div>
 
 					<div class="timeline-header">
-						<h3>Teaching programming and Supporting information technology</h3>
+						<h3>Teaching programming</h3>
 						<p>November 2017 - Present</p>
 					</div>
 
 					<div class="timeline-content">
 						<h4>Ibnu Hajar Boarding School</h4>
-						<p>Teach programming and supporting information technology to students from junior high to high school levels.</p>
+						<p>Teach programming to students from junior high to high school levels.</p>
 					</div>
 			    
 				</div> <!-- /timeline-block -->
@@ -288,6 +288,25 @@
 					<div class="timeline-ico">
 					 <i class="fa fa-briefcase"></i>
 					</div>
+
+					<div class="timeline-header">
+						<h3>IT Support</h3>
+						<p>November 2017 - Present</p>
+					</div>
+
+					<div class="timeline-content">
+						<h4>Ibnu Hajar Boarding School</h4>
+						<p>supporting information technology to students from junior high to high school levels.</p>
+					</div>
+			    
+				</div> <!-- /timeline-block -->
+
+				<div class="timeline-block">
+
+					<div class="timeline-ico">
+					 <i class="fa fa-briefcase"></i>
+					</div>
+
 
 					<div class="timeline-header">
 						<h3>Credit Analyst</h3>
@@ -482,7 +501,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/aplikasiLatihanSoalWidyaEdu.PNG" alt="aplikasilatsoal">
+	               	<img src="images/portfolio/aplikasiLatihanSoalWidyaEdu.png" alt="aplikasilatsoal">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
