--- a/index.html
+++ b/index.html
@@ -600,11 +600,11 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+						<img src="images/portfolio/aplikasiLatihanSoalWidyaEdu.png" alt="" />
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Liberty</h4>		      
+					 <h4>Aplikasi Latihan Soal</h4>		      
 					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
 					 <div class="categories">Web Development</div>			               
@@ -620,14 +620,14 @@
 			  <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+						<img src="images/portfolio/linktree-robby.png" alt="" />
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Shutterbug</h4>		      
+					 <h4>Link Tree</h4>		      
 					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
-					 <div class="categories">Web Design</div>			               
+					 <div class="categories">Web Development</div>			               
 				  </div>
 
 				<div class="link-box">
@@ -640,11 +640,11 @@
 			  <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+						<img src="images/portfolio/flyer_lws.jpg" alt="" />
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Clouds</h4>		      
+					 <h4>Laksana Web Solution</h4>		      
 					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
 					 <div class="categories">Web Design</div>			               
@@ -660,11 +660,11 @@
 			  <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+						<img src="images/portfolio/Bahari_Service_AC.png" alt="" />
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Beetle</h4>		      
+					 <h4>Bahari Service AC</h4>		      
 					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
 					 <div class="categories">Branding</div>			               
@@ -680,11 +680,11 @@
 			  <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+						<img src="images/portfolio/landingPage.png" alt="" />
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Lighthouse</h4>		      
+					 <h4>Landing Page</h4>		      
 					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
 					 <div class="categories">Web Development</div>			               
@@ -700,7 +700,7 @@
 			  <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 					<div class="media">
-						<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+						<img src="images/portfolio/zairahMotorize.png" alt="" />
 					</div>      	
 
 				  <div class="description-box">
