--- a/index.html
+++ b/index.html
@@ -605,13 +605,12 @@
 
 				  <div class="description-box">
 					 <h4>Aplikasi Latihan Soal</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <p>Application practice questions from widya edu.</p>
 
 					 <div class="categories">Web Development</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -625,13 +624,12 @@
 
 				  <div class="description-box">
 					 <h4>Link Tree</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <p>A special linktree type website for personal data.</p>
 
 					 <div class="categories">Web Development</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -645,13 +643,13 @@
 
 				  <div class="description-box">
 					 <h4>Laksana Web Solution</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <p>
+						Flyers as a means to promote a product or service..</p>
 
-					 <div class="categories">Web Design</div>			               
+					 <div class="categories">Flyer</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -665,13 +663,13 @@
 
 				  <div class="description-box">
 					 <h4>Bahari Service AC</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <p>
+						build a website for promotion and a portfolio of a product or service.</p>
 
-					 <div class="categories">Branding</div>			               
+					 <div class="categories">Web Design</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -685,13 +683,13 @@
 
 				  <div class="description-box">
 					 <h4>Landing Page</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <p>
+						Website landing page functions are almost similar to Web Design.</p>
 
 					 <div class="categories">Web Development</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -704,14 +702,13 @@
 					</div>      	
 
 				  <div class="description-box">
-					 <h4>Salad</h4>		      
-					 <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					 <h4>Zairah Motorize</h4>		      
+					 <p>Build a website for promotion and a portfolio of a product or service.</p>
 
 					 <div class="categories">Branding</div>			               
 				  </div>
 
 				<div class="link-box">
-				   <a href="http://www.behance.net">Details</a>
 					 <a href="#" class="popup-modal-dismiss">Close</a>
 				</div>		      
 
@@ -933,7 +930,7 @@
    			<h5>Call Me At</h5>
 
    			<p>Phone: (+062) 8788 82770761<br>
-			   	Mobile: (+62) 813 67943830<br>
+			   	Mobile: (+62) 8136 7943830<br>
 			   </p>
 
    		</div>
