--- a/index.html
+++ b/index.html
@@ -929,8 +929,8 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+062) 8788 82770761<br>
-			   	Mobile: (+62) 8136 7943830<br>
+   			 <p>Phone: (+62)8788-82770761<br>
+			   	Mobile: (+62)8136-7943830<br>
 			   </p>
 
    		</div>
